--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -90,3 +90,6 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
+.bg_jumbotron{
+  background-color: #c7bbbb;
+}
