--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,23 @@
 }
 .scroll{
     overflow-x: scroll;
+    height: 573px;
 }
 
-
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(92, 88, 88, 0);
+    background: rgb(115, 191, 64);
+}
+::-webkit-scrollbar-thumb{
+    background: rgb(49, 177, 202);
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color: rgb(224, 188, 140);
+}
+::-webkit-scrollbar-thumb:active{
+    background-color: brown;
+}
